--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    <div class="experience-contents">
     <div class="exp-left">
         <p class="exp-company-name">Empresa 01</p>
-        <p class="exp-time-period">2021-Present</p>
+        <p class="exp-time-period">2021-2022</p>
 </div>
 <div class="exp-right">
     <p class="exp-position">Engenheiro de Software</p>
