--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="left-section-content">
             <div class="profile">
                 <img class="profile-image" src="./img/profile-image.jpg"  alt="Profile image">
-                <p class="name">Brenda</p>
+                <p class="name">Brenda Cassali</p>
                 <p class="profession">Software Engineer</p>
             </div>
             <div class="contact-info">
@@ -100,6 +100,30 @@
                 </p>
             </div>
         </div>
+        </section>
+        <section class="awards gap">
+            <div class="right-title">Cursos</div>
+            <div class="awards-contents">
+                <div class="awards-left">
+                <p class="awards-company-name">EBAC</p>
+                <p class="awards-time-period">Junho de 2018</p>
+            </div>
+            <div class="awards-right">
+                <p class="awards-name">Cuso de UX</p>
+                <p class="awards-desc">
+                    Curso feito na EBAC no ano de 2018
+                </p>
+            </div>
+            <div class="awards-left">
+                <p class="awards-company-name">EBAC</p>
+                <p class="awards-time-period">Junho de 2019</p>
+            </div>
+            <div class="awards-right">
+                <p class="awards-name">Cuso de Analise de Dados</p>
+                <p class="awards-desc">
+                    Curso feito na EBAC no ano de 2019
+                </p>
+            </div>
         </section>
         </section>
     
