--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE htmal>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brenda Cassali</title>
+    <title>Brenda Cassali CV</title>
+
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,8 +33,8 @@
                 <ul>
                     <li><i class="fa fa-phone"></i>+55 48 9999-999</li>
                     <li><i class="fa fa-envelope"></i>brenda@hotmail.com</li>
-                    <li><i class="fa fa-globe"></i>@brenda</li>
-                    <li><i class="fa fa-github"></i>ingegnerebrenda</li>
+                    <li><i class="fa fa-globe"></i>www.brenda.com</li>
+                    <li><i class="fa fa-github"></i>ingeneerbrenda</li>
                 </ul>
 
             </div>
@@ -45,20 +55,20 @@
             <div class="right-section-contents">
                 <section class="about gap">
                     <div class="right-title"> Sobre Mim</div>
-                    <p class="about-me-contents"></p>
-                    Ola sou a Brenda <br>
+                    <p class="about-me-contents">
+                    Olá sou a Brenda <br>
                    <br>Um pouco mais sobre o que eu faço
-                   <br>Quais sao minhas competencias
+                   <br>Quais são minhas competências
                 </section>
 
-            </div>
+            
 
 
 <section class="experience gap">
-   <div class="right-title">Experiencias</div>
+   <div class="right-title">Experiências</div>
    <div class="experience-contents">
     <div class="exp-left">
-        <p class="exp-company-name">Empresa 01</p>
+        <p class="exp-company-name">Sicredi</p>
         <p class="exp-time-period">2021-2022</p>
 </div>
 <div class="exp-right">
@@ -66,7 +76,7 @@
     <p class="exp-desc">Descreva aqui suas principais atividades da empresa 01</p>
 </div>
 <div class="exp-left">
-    <p class="exp-company-name">Empresa 02</p>
+    <p class="exp-company-name">Nubank</p>
     <p class="exp-time-period">2011-2020</p>
 </div>
 <div class="exp-right">
@@ -116,15 +126,16 @@
             </div>
             <div class="awards-left">
                 <p class="awards-company-name">EBAC</p>
-                <p class="awards-time-period">Junho de 2019</p>
+                <p class="awards-time-period">Junho de 2020</p>
             </div>
             <div class="awards-right">
                 <p class="awards-name">Cuso de Analise de Dados</p>
                 <p class="awards-desc">
-                    Curso feito na EBAC no ano de 2019
+                    Curso feito na EBAC no ano de 2020
                 </p>
             </div>
         </section>
+    </div>
         </section>
     
 
